--- a/2_aws_s3/s3.md
+++ b/2_aws_s3/s3.md
@@ -298,29 +298,12 @@ df = pd.read_csv(
 )
 ```
 
-
----
-
-# DEMO
-
----
-
-
-- Amazon S3 se puede usar para alojar un sitio web estático.
-- En un sitio web estático, cada página web incluye contenido estático.
-- Cuando configura un bucket como sitio web estático, debe habilitar el alojamiento de sitios web estáticos, configurar un documento de índice y establecer permisos. 
-
-- https://docs.aws.amazon.com/es_es/AmazonS3/latest/userguide/WebsiteHosting.html
----
-
-# DEMO
-
 ---
 
 # Ejercicio
 Realiza mediante el portal de AWS, la extensión cd vscode y la CLI los siguientes pasos:
 - Crea un bucket.
-- Sube el fichero market_data.csv
+- Sube el fichero market_data.txt
 - Descarga el fichero.
 
 ---
@@ -334,6 +317,6 @@ Desde la instacia EC2, realiza:
 
 # Ejercicio
 Desde la instacia EC2, realiza:
-- Lee el fichero de market_data.csv. de uno de los buckets creados anteriormente, usando la librería pandas
+- Lee el fichero de market_data.txt de uno de los buckets creados anteriormente, usando la librería pandas
 - Modifica el contenido.
 - Sube el nuevo fichero modificado como market_data_mod.csv.
